Add prompt nummber, team members and HTML elements

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-	text-decoration: none;
-	list-style: none;
+    text-decoration: none;
+    list-style: none;
+}
+
+.col-cs {
+    width: calc(100% / 4);
 }
